{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 82,
  "lineage": "b1a18b59-22ba-40fc-09d1-733277985e2f",
  "resources": [
    {
      "module": "module.vpc.module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules_ingress_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "allow-ssh",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-30T18:35:17.539-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/playground-s-11-2c50621a/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-2c50621a/global/networks/olympus",
            "priority": 1000,
            "project": "playground-s-11-2c50621a",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-2c50621a/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "allow-ssh-ingress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-30T18:35:17.495-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/playground-s-11-2c50621a/global/firewalls/allow-ssh-ingress",
            "log_config": [],
            "name": "allow-ssh-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-2c50621a/global/networks/olympus",
            "priority": 1000,
            "project": "playground-s-11-2c50621a",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-2c50621a/global/firewalls/allow-ssh-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "egress-internet",
          "schema_version": 0,
          "attributes": {
            "description": "route through IGW to access internet",
            "dest_range": "0.0.0.0/0",
            "id": "projects/playground-s-11-2c50621a/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-2c50621a/global/networks/olympus",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/playground-s-11-2c50621a/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "playground-s-11-2c50621a",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-2c50621a/global/routes/egress-internet",
            "tags": [
              "egress-inet"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-east5/subnet-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-30T18:35:20.670-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/playground-s-11-2c50621a/regions/us-east5/subnetworks/subnet-01",
            "ip_cidr_range": "10.10.0.0/16",
            "name": "subnet-01",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-2c50621a/global/networks/olympus",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "playground-s-11-2c50621a",
            "purpose": "PRIVATE",
            "region": "us-east5",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.11.0.0/16",
                "range_name": "subnet-01-pods"
              },
              {
                "ip_cidr_range": "10.12.0.0/16",
                "range_name": "subnet-01-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-2c50621a/regions/us-east5/subnetworks/subnet-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/playground-s-11-2c50621a/global/networks/olympus",
            "mtu": 0,
            "name": "olympus",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "playground-s-11-2c50621a",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-2c50621a/global/networks/olympus"
          }
        }
      ]
    }
  ]
}